<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderFragment">


    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/pizzaList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="150dp" />

    <TextView
        android:id="@+id/pizzaTypeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/pizzaTypeView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/personalDataView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/personalDataField"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/phoneNumber"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="225dp"
        android:layout_marginTop="240dp"
        android:text="@string/orderButton" />

    <CheckBox
        android:id="@+id/isSpicy"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="190dp"
        android:text="Гостра" />

    <CheckBox
        android:id="@+id/addCola"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="190dp"
        android:text="Coca Cola" />

</FrameLayout>